update to version 6.0

--- a/inst/landing-page/heat_landing_login.html
+++ b/inst/landing-page/heat_landing_login.html
@@ -3,7 +3,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-12 margin-bottom-25 text-right">
-          <h1 data-i18n="navigation.labels.heat"></h1>
+          <h1 data-i18n="navigation.labels.heatplus"></h1>
           <!--<h1>Health Equity<br />Assessment Toolkit Plus<br />(HEAT Plus)</h1>-->
           <p id="upload-database-edition mb-0" data-i18n="home.labels.upload">
             Upload Database Edition
@@ -212,7 +212,7 @@
     </div>
     <div class="container-fluid" id="copyright-row-container">
       <div class="row text-right" id="copyright-row">
-        <p><small>© 2021 WHO</small></p>
+        <p><small>© 2024 WHO</small></p>
       </div>
     </div>
   </section>
