--- a/inst/www/locales/en/license-popup.html
+++ b/inst/www/locales/en/license-popup.html
@@ -1,5 +1,5 @@
 <!--
-© Copyright World Health Organization (WHO) 2016-2021.
+© Copyright World Health Organization (WHO) 2016-2024.
 This file is part of the WHO Health Equity Assessment Toolkit 
 (HEAT and HEAT Plus), a software application for assessing 
 health inequalities in countries.
@@ -46,10 +46,10 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
     <ol style="list-style-type: lower-roman">
       <li>
-        <strong>HEAT, the built-in database edition</strong> which includes WHO
-        data, originating from the WHO Health Equity Monitor database, for use
-        with the Software (the <strong>"Data"</strong>), and which does not
-        allow you to upload your own data into the Software; and
+        <strong>HEAT, the built-in database edition</strong> which includes data
+        from the WHO Health Inequality Data Repository for use with the Software
+        (the <strong>"Data"</strong>), and which does not allow you to upload
+        your own data into the Software; and
       </li>
       <li>
         <strong>HEAT Plus, the upload database edition</strong> which enables
@@ -68,11 +68,10 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
     </p>
 
     <p>
-      1.2 Both HEAT and HEAT Plus are available in two formats: an online
-      version, and a downloadable desktop version. The applicability of certain
-      aspects of the Terms of Use will depend on whether you are using HEAT
-      and/or HEAT Plus, and whether that is through the online or desktop
-      version(s).
+      1.2. HEAT and HEAT Plus are available in two formats: an online version,
+      and a downloadable desktop version. The applicability of certain aspects
+      of the Terms of Use will depend on whether you are using HEAT and/or HEAT
+      Plus, and whether that is through the online or desktop version(s).
     </p>
 
     <p>&nbsp;</p>
@@ -85,9 +84,6 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
       web browser. In the stand-alone package of the Toolkit, WHO has provided a
       portable version of "R", and the portable edition of the web browsers
       Google Chrome or Chromium. These do not require any installation.
-      Furthermore, to use the online version of HEAT Plus, you are required to
-      establish an account with Microsoft, and login with that account, and
-      thereby accept the Microsoft Terms of Use.
     </p>
 
     <p>
@@ -124,7 +120,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
     <p>
       3.1. <u>Copyright and license</u>. The Software is copyright &copy; World
-      Health Organization, 2016&ndash;2021, and is distributed under the terms
+      Health Organization, 2016&ndash;2024, and is distributed under the terms
       of
       <a href="https://www.gnu.org/licenses/agpl-3.0.en.html" target="_blank"
         >version 3 of the GNU Affero General Public License</a
@@ -142,13 +138,13 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
     <p>4. Copyright and Terms of Use for the Data</p>
 
     <p>
-      4.1. <u>Copyright of Data</u>. The Data originates from the
-      <a
-        href="https://www.who.int/data/gho/health-equity/health-equity-monitor-database"
-        target="_blank"
-        >WHO Health Equity Monitor database</a
-      >, and is &copy; WHO. For the avoidance of any doubt, WHO hereby asserts
-      its copyright in the Data, and reserves all rights in the Data.
+      4.1. <u>Copyright of Data</u>. The Data in HEAT are from the
+      <a href="https://www.who.int/data/inequality-monitor/data" target="_blank"
+        >WHO Health Inequality Data Repository</a
+      >. Except where otherwise indicated, the Data is &copy WHO. Please refer
+      to the Indicator Metadata for more information about the source of the
+      Data. For the avoidance of any doubt, WHO hereby asserts its copyright in
+      the Data, and reserves all rights in the Data.
     </p>
 
     <p>
@@ -243,7 +239,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
       <em
         >Health Equity Assessment Toolkit (HEAT): Software for exploring and
         comparing health inequalities in countries. Built-in database edition.
-        Version 4.0. Geneva, World Health Organization, 2021.</em
+        Version 6.0. Geneva, World Health Organization, 2024.</em
       >
     </p>
 
