--- a/inst/www/locales/en/manual.html
+++ b/inst/www/locales/en/manual.html
@@ -1,5 +1,5 @@
 <!--
-? Copyright World Health Organization (WHO) 2016-2021.
+© Copyright World Health Organization (WHO) 2016-2024.
 This file is part of the WHO Health Equity Assessment Toolkit 
 (HEAT and HEAT Plus), a software application for assessing 
 health inequalities in countries.
@@ -19,12 +19,17 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 -->
 
 <div class="aboutcontainer">
-<h1 class="aboutheader"><a id="top" name="top"></a>User manual</h1>
+  <h1 class="aboutheader"><a id="top" name="top"></a>User manual</h1>
 
-<p>&nbsp;</p>
+  <p>&nbsp;</p>
 
-<p>Click <a href="heatplus-assets/locales/en/User_manual.pdf" target="_blank">here</a> to download the user manual (pdf format).</p>
+  <p>
+    Click
+    <a href="heatplus-assets/locales/en/User_manual.pdf" target="_blank"
+      >here</a
+    >
+    to download the user manual (pdf format).
+  </p>
 
-<p>&nbsp;</p>
-
+  <p>&nbsp;</p>
 </div>
